--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: EBSeqHMM
 Type: Package
 Title: Bayesian analysis for identifying gene or isoform expression
         changes in ordered RNA-seq experiments
-Version: 1.3.0
-Date: 2014-10-10
+Version: 1.3.1
+Date: 2015-5-19
 Author: Ning Leng, Christina Kendziorski
 Depends: EBSeq
-Maintainer: Ning Leng <nleng@wisc.edu>
+Maintainer: Ning Leng <lengning1@gmail.com>
 Description: The EBSeqHMM package implements an auto-regressive hidden Markov model for statistical analysis in ordered RNA-seq experiments (e.g. time course or spatial course data). The EBSeqHMM package provides functions to identify genes and isoforms that have non-constant expression profile over the time points/positions, and cluster them into expression paths.
 License: Artistic-2.0
 Collate: 'EBTest_ext.R' 'EBHMMNBfunForMulti.R' 'EBHMMNBfun.R'
